039_canary_ingress_example/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: my-app
spec:
  rules:
    - host: app.michalhucko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-svc-v1
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
  name: my-app-2
spec:
  rules:
    - host: app.michalhucko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-svc-2
                port:
                  number: 80
